Fix quake pos in tridactyl

--- a/.config/tridactyl/themes/customquake.css
+++ b/.config/tridactyl/themes/customquake.css
@@ -41,7 +41,7 @@
     position: fixed !important;
     bottom: unset;
     top: 0% !important;
-    left: 0% !important;
+    left: -2px !important;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 15px !important;
     opacity: 1;
 }
